--- a/backup/index.html
+++ b/backup/index.html
@@ -57,12 +57,29 @@
       </thead>
       <tbody>
         <tr>
-          <td><input type="text" class="nomeSocio" placeholder="Nome completo" required></td>
-          <td><input type="text" class="cpfSocio" placeholder="CPF/CNPJ" required></td>
-          <td><input type="date" class="dataNascimento" required></td>
-          <td><input type="number" class="percentualSocietario" step="0.01" max="100" placeholder="% Societário" required></td>
+          <td><input type="text" class="nomeSocio" placeholder="Nome completo"></td>
+          <td><input type="text" class="cpfSocio" placeholder="CPF/CNPJ"></td>
+          <td><input type="date" class="dataNascimento"></td>
+          <td><input type="number" class="percentualSocietario" step="0.01" max="100" placeholder="% Societário"></td>
         </tr>
-        <!-- Repita os tr conforme necessário -->
+        <tr>
+          <td><input type="text" class="nomeSocio" placeholder="Nome completo"></td>
+          <td><input type="text" class="cpfSocio" placeholder="CPF/CNPJ"></td>
+          <td><input type="date" class="dataNascimento"></td>
+          <td><input type="number" class="percentualSocietario" step="0.01" max="100" placeholder="% Societário"></td>
+        </tr>
+        <tr>
+          <td><input type="text" class="nomeSocio" placeholder="Nome completo"></td>
+          <td><input type="text" class="cpfSocio" placeholder="CPF/CNPJ"></td>
+          <td><input type="date" class="dataNascimento"></td>
+          <td><input type="number" class="percentualSocietario" step="0.01" max="100" placeholder="% Societário"></td>
+        </tr>
+        <tr>
+          <td><input type="text" class="nomeSocio" placeholder="Nome completo"></td>
+          <td><input type="text" class="cpfSocio" placeholder="CPF/CNPJ"></td>
+          <td><input type="date" class="dataNascimento"></td>
+          <td><input type="number" class="percentualSocietario" step="0.01" max="100" placeholder="% Societário"></td>
+        </tr>
       </tbody>
     </table>
 
