--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <form id="kycForm">
     <h1>Formulário KYC</h1>
+    <h2 class="descricao">PEP = Pessoas Expostas Politicamente são, basicamente, agentes públicos que desempenham ou tenham desempenhado, nos últimos cinco anos, cargos ou funções públicas relevantes, assim como seus representantes, familiares e pessoas de seu relacionamento próximo.
+
+      O Cliente declara, para todos os fins de Direito, que as informações abaixo prestadas são verídicas, comprometendo-se a informar o 3X Pay, imediatamente, sobre quaisquer alterações ou novas condições relevantes para fins de Compliance. Por fim, tem ciência de que novas informações ou documentos poderão ser solicitados a qualquer momento.
+    </h2>
     <div>
       <label for="razaoSocial">Razão Social da Empresa:</label>
       <input type="text" name="razaoSocial" required>
