--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form id="kycForm" action="https://staticforms.xyz/form" method="POST">
+  <form id="kycForm" action="https://staticforms.xyz/form" method="POST" novalidate>
     <h1>Formulário KYC</h1>
     <h2 class="descricao">PEP = Pessoas Expostas Politicamente são, basicamente, agentes públicos que desempenham ou tenham desempenhado, nos últimos cinco anos, cargos ou funções públicas relevantes, assim como seus representantes, familiares e pessoas de seu relacionamento próximo.
 
